--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.1159"/>
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3152"/>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -17,57 +17,61 @@
       <h1 class="hero">🕊️ Dove is a theme development project.</h1>
       <nav>
         <ul>
-          <li><a href="home">Home</a>
+          <li><b>Dove</b>
+<i class="_icon"><i class="isvg">
+                <svg viewBox="0 0 24 24">
+                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                </svg></i></i><a href="https://techie-joe.github.io/dove/home">Home</a>
           </li>
-          <li>
-<a href="/dove/core/">Core</a>
+          <li><b>Core</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
+<a href="/dove/core/">Home</a>
+<a href="/dove/core/preview.html">Preview</a>
 <a href="/dove/core/legacy.html">Legacy</a>
-<a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
           </li>
-          <li>
-<a href="/dove/nova/">Nova</a>
+          <li><b>Nova</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
+<a href="/dove/nova/">Home</a>
+<a href="/dove/nova/preview.html">Preview</a>
 <a href="/dove/nova/legacy.html">Legacy</a>
-<a href="/dove/nova/home.html">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
           </li>
-          <li>
-<a href="/dove/mallet/">Mallet</a>
+          <li><b>Mallet</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
+<a href="/dove/mallet/">Home</a>
+<a href="/dove/mallet/preview.html">Preview</a>
 <a href="/dove/mallet/legacy.html">Legacy</a>
-<a href="/dove/mallet/home.html">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
           </li>
-          <li>
-<a href="/dove/prime/">Prime</a>
+          <li><b>Prime</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
+<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/preview.html">Preview</a>
 <a href="/dove/prime/legacy.html">Legacy</a>
-<a href="/dove/prime/home.html">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
           </li>
         </ul>
       </nav>
       <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
-version  : 0.0.2.1159
-revision : 33.13.1159
+version  : 0.0.2.3152
+revision : 33.3152
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -85,6 +89,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1159"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3152"></script>
   </body>
 </html>
