--- a/nova/404.html
+++ b/nova/404.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : core/home.html -->
-  <!-- page.layout : pugs/core -->
+<html class="_nova_layout" lang="en-US"><!-- page.path   : 404.html -->
+  <!-- page.layout : pugs/nova -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Home | Dove</title><!-- End Jekyll SEO tag -->
+    <title>Not found | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.1200"/>
-    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.1200"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3154"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.3154"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.3154"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
       <div class="_view">
         <header class="_header">
-          <div class="_layoutx">
+          <div class="_layout">
             <div class="flex">
               <div class="fill">
                 <div class="_logo"><a href="/dove">Dove</a>
@@ -31,24 +32,36 @@
           </div>
         </header>
         <nav class="_nav">
-          <div class="_layoutx _960">
-<a href="/dove/mallet/">Mallet</a>
+          <div class="_layout _960"><b>Nova</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                 </svg></i></i>
-<a href="/dove/mallet/legacy.html">Legacy</a>
-<a href="/dove/mallet/home.html">Home</a>
-<a href="/dove/mallet/page.html">Page</a>
-<a href="/dove/mallet/404.html">404</a>
+<a href="/dove/nova/">Home</a>
+<a href="/dove/nova/preview.html">Preview</a>
+<a href="/dove/nova/legacy.html">Legacy</a>
+<a href="/dove/nova/page.html">Page</a>
+<a href="/dove/nova/404.html">404</a>
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layoutx _960"><code>// content for : Home</code>
+          <article class="_article _layout _960">
+            <div class="flex">
+              <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
+              <div class="f" style="padding:0 1rem">
+                <h2>Oops! Nothing found</h2>
+                <p>The content you are looking for is not here.</p>
+              </div>
+            </div>
+            <div style="margin-top:3rem"></div>
+            <hr/>
+            <p><a class="button text-secondary" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
+<a class="button text-secondary" href="/dove" title="Go to Home Page">Home</a>
+            </p>
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layoutx _960">
+          <div class="_layout _960">
             <p><small class="mono">// by Techie Joe 2025</small></p>
           </div>
         </footer>
@@ -57,6 +70,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.1200"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3154"></script>
   </body>
 </html>
