--- a/core/preview.html
+++ b/core/preview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : preview.html -->
-  <!-- page.layout : pugs/core -->
+<html class="_core_layout" lang="en-US"><!-- path   : core/preview.html -->
+  <!-- layout : pugs/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Preview | Dove</title><!-- End Jekyll SEO tag -->
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3153"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.2514"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -44,6 +44,10 @@
 <p><strong>Leave whitespace between paragraphs for clarity.</strong></p>
   
 <p class="indent text-justify text-grey"><strong>You'll notice some gibberish text in this demo.</strong> It's simply placeholder content, added to help you visualize how the layout, spacing, and typography will appear once real content is in place. The text itself doesn't carry any meaning, it's just there to fill the empty areas and make the overall design feel balanced and complete. Each line and section tells a “different story”, though none of it is meant to be understood literally. It's more of a creative illusion, a way to showcase how color, contrast, and structure come together to create a theme. It honors the “look and feel”, a metaphor for how design can shift and vary in perspective. That's the beauty of visual design. Every layout tells its own silent story, even when the words themselves mean nothing at all.</p>
+
+<blockquote>
+  <p>Have a look at <a href="./legacy.html">the legacy</a> for the classic demo page.</p>
+</blockquote>
 
 <hr />
 
@@ -95,10 +99,6 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
 <a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
 <span class="text-gray">&bull;</b>
 <a href="#" onclick="event.preventDefault();theme.change()" class="button text-secondary" title="Change Theme (Alt+T)">Change Theme</a></p>
-
-<p>
-<a href="#" onclick="event.preventDefault();" class="button bg-blue text-white ph pv_5">Big Button</a>
-</p>
 
 <h2>Footnote links</h2>
 
@@ -461,6 +461,8 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
         <footer class="_footer">
           <div class="_layout _960">
             <p><small class="mono">// by Techie Joe 2025</small></p>
+            <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/core/preview.html.pug" target="_edit">Improve this page</a>.
+            </p>
           </div>
         </footer>
       </div>
@@ -472,6 +474,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3153"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2514"></script>
   </body>
 </html>
