--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US"><!-- page.path   : index.html -->
-  <!-- page.layout : pugs/prime -->
+<html class="_prime_layout" lang="en-US"><!-- path   : index.html -->
+  <!-- layout : pugs/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Index | Dove</title><!-- End Jekyll SEO tag -->
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3152"/>
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.2514"/>
     <style>h1.hero { font-family: 'Arial',system-ui,sans-serif }</style><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
@@ -70,8 +70,8 @@
         </ul>
       </nav>
       <pre class="scrollable">source   : <a href="https://github.com/techie-joe/dove">techie-joe/dove</a>
-version  : 0.0.2.3152
-revision : 33.3152
+version  : 0.0.2.2514
+revision : 33.2514
 site_url : <a class="_no_u" href="/dove">/dove</a>
 home_url : <a class="_no_u" href="/dove">/dove</a>
 ghost                : bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv
@@ -79,7 +79,8 @@ google_analytics     : (undefined)
 cloudflare_analytics : (undefined)</pre>
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
         <p><small class="mono">// by Techie Joe 2025</small></p>
-        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug">Improve this page</a>.</p>
+        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/index.html.pug" target="_edit">Improve this page</a>.
+        </p>
       </div>
     </div>
     <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
@@ -89,6 +90,6 @@ cloudflare_analytics : (undefined)</pre>
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3152"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2514"></script>
   </body>
 </html>
