--- a/mallet/page.html
+++ b/mallet/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- page.path   : page.html -->
+<html class="_core_layout" lang="en-US"><!-- page.path   : mallet/page.html -->
   <!-- page.layout : pugs/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3153"/>
-    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.3153"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.2514"/>
+    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.2514"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -44,12 +44,15 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layoutx _960"><code>// content for : Page</code>
+          <article class="_article _layoutx _960">
+            <p><code>// content for : Page</code></p>
           </article>
         </main>
         <footer class="_footer">
           <div class="_layoutx _960">
             <p><small class="mono">// by Techie Joe 2025</small></p>
+            <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/mallet/page.html.pug" target="_edit">Improve this page</a>.
+            </p>
           </div>
         </footer>
       </div>
@@ -57,6 +60,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3153"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2514"></script>
   </body>
 </html>
