--- a/nova/404.html
+++ b/nova/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="_nova_layout" lang="en-US"><!-- page.path   : 404.html -->
+<html class="_nova_layout" lang="en-US"><!-- page.path   : nova/404.html -->
   <!-- page.layout : pugs/nova -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
@@ -8,15 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3154"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.3154"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.3154"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.2515"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.2515"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.2515"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
       <div class="_view">
         <header class="_header">
-          <div class="_layout">
+          <div class="_layoutx">
             <div class="flex">
               <div class="fill">
                 <div class="_logo"><a href="/dove">Dove</a>
@@ -32,7 +32,7 @@
           </div>
         </header>
         <nav class="_nav">
-          <div class="_layout _960"><b>Nova</b>
+          <div class="_layoutx _960"><b>Nova</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -45,7 +45,7 @@
           </div>
         </nav>
         <main class="_main">
-          <article class="_article _layout _960">
+          <article class="_article _layoutx _960">
             <div class="flex">
               <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
               <div class="f" style="padding:0 1rem">
@@ -61,8 +61,10 @@
           </article>
         </main>
         <footer class="_footer">
-          <div class="_layout _960">
+          <div class="_layoutx _960">
             <p><small class="mono">// by Techie Joe 2025</small></p>
+            <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/nova/404.html.pug" target="_edit">Improve this page</a>.
+            </p>
           </div>
         </footer>
       </div>
@@ -70,6 +72,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3154"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2515"></script>
   </body>
 </html>
