--- a/prime/page.html
+++ b/prime/page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html class="_prime_layout" lang="en-US"><!-- page.path   : page.html -->
-  <!-- page.layout : pugs/prime -->
+<html class="_prime_layout" lang="en-US"><!-- path   : prime/page.html -->
+  <!-- layout : pugs/prime -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
     <title>Page | Dove</title><!-- End Jekyll SEO tag -->
@@ -8,16 +8,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.3154"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.2515"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="/dove">Dove</a></h1>
-      <h2>Page</h2>
+      <h1>Page</h1>
       <p><code>// content for : Page</code></p>
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
         <p><small class="mono">// by Techie Joe 2025</small></p>
-        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/page.html.pug">Improve this page</a>.</p>
+        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/page.html.pug" target="_edit">Improve this page</a>.
+        </p>
       </div>
     </div>
     <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
@@ -27,6 +28,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3154"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.2515"></script>
   </body>
 </html>
