--- a/nova/preview.html
+++ b/nova/preview.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.6830"/>
-    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.6830"/>
-    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.6830"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.7326"/>
+    <link id="_style_nova" rel="stylesheet" href="/dove/assets/nova/css/nova.css?v=0.0.2.7326"/>
+    <link id="_style_basic" rel="stylesheet" href="/dove/assets/nova/css/basic.css?v=0.0.2.7326"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -67,7 +67,7 @@
 <!-- Comment blocks will not appear on the screen. -->
 <!-- {% comment %} Liquid comments will not be rendered. {% endcomment %} -->
 
-<p>There's a <strong>horizontal rule</strong> above this sentence, followed by a <strong>comment block</strong>. Comment blocks will not appear on the screen, and Liquid comments will not be rendered.</p>
+<p class="text-justify">There's a <strong>horizontal rule</strong> above this sentence, followed by a <strong>comment block</strong>. Comment blocks will not appear on the screen, and Liquid comments will not be rendered.</p>
 
 <h2>Styling texts</h2>
 
@@ -483,6 +483,6 @@ Every new line in footnote should be prefixed with 2 space or 4 space indentatio
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.6830"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.7326"></script>
   </body>
 </html>
