--- a/prime/index.html
+++ b/prime/index.html
@@ -8,26 +8,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.6830"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style_prime" rel="stylesheet" href="/dove/assets/prime/css/style.css?v=0.0.2.7326"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class="container-lg px-3 my-5 markdown-body">
-      <h1><a href="/dove">Dove</a></h1>
-      <h1>Home</h1>
-      <p><code>// content for : Home</code></p>
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        <p><small class="mono">// by Techie Joe 2025</small></p>
-        <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/index.html.pug" target="_edit">Improve this page</a>.
-        </p>
+    <div class="_views">
+      <div class="_view">
+        <div class="_layout _1020">
+          <div class="container-lg px-3 my-5 markdown-body">
+            <h1 class="_logo"><a href="/dove">Dove</a></h1>
+            <nav class="_nav">
+              <div class="_layout"><b>Prime</b>
+<i class="_icon"><i class="isvg">
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i>
+<a href="/dove/prime/preview.html">Preview</a>
+<a href="/dove/prime/legacy.html">Legacy</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/page.html">Page</a>
+<a href="/dove/prime/404.html">404</a>
+                <hr class="thin border-gray-light"/>
+              </div>
+            </nav>
+            <main class="_main">
+              <article class="_article _layout">
+                <h1>Home</h1>
+                <p><code>// content for : Home</code></p>
+              </article>
+            </main>
+            <footer class="_footer">
+              <div class="_layout footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
+                <p><small class="mono">// by Techie Joe 2025</small></p>
+                <p>This site is open source. <a href="https://github.com/techie-joe/dove/edit/main/_pugs/prime/index.html.pug" target="_edit">Improve this page</a>.
+                </p>
+              </div>
+            </footer>
+          </div>
+        </div>
+      </div>
+      <div class="_view">
+        <div class="_layout _1020">
+          <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
+                  <svg viewBox="0 0 24 24">
+                    <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
+                  </svg></i></i></a></div>
+        </div>
+      </div>
+      <div class="_view">
+        <div class="_layout _1020"><!-- custom-body -->
+          <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
+          </div>
+          <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
+          <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.7326"></script>
+        </div>
       </div>
     </div>
-    <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
-            <svg viewBox="0 0 24 24">
-              <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
-            </svg></i></i></a></div><!-- custom-body -->
-    <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
-    </div>
-    <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.6830"></script>
   </body>
 </html>
