--- a/mallet/404.html
+++ b/mallet/404.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5114"/>
-    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.5114"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5413"/>
+    <link id="_style_mallet" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.5413"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -64,7 +64,7 @@
         <footer class="_footer">
           <div class="_layoutx _960">
             <p>
-<a href="https://techiejoe.github.io">Techie Joe</a>
+<a href="https://techie-joe.github.io">Techie Joe</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove">Dove</a>
@@ -83,6 +83,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5114"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5413"></script>
   </body>
 </html>
