--- a/core/page.html
+++ b/core/page.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5413"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.6254"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -21,11 +21,12 @@
             </div>
           </header>
           <nav class="_nav">
-            <div class="_layout _960"><b>Core</b>
+            <div class="_layout _960">
+              <p><b>Core</b>
 <i class="_icon"><i class="isvg">
-                  <svg viewBox="0 0 24 24">
-                    <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                  </svg></i></i>
+                    <svg viewBox="0 0 24 24">
+                      <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                    </svg></i></i>
 <a href="/dove/core/preview.html">Preview</a>
 <a href="/dove/core/legacy.html">Legacy</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
@@ -33,6 +34,7 @@
 <a href="/dove/core/">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
+              </p>
             </div>
           </nav>
           <main class="_main">
@@ -43,15 +45,8 @@
           </main>
           <footer class="_footer">
             <div class="_layout _960">
-              <p>
-<a href="https://techie-joe.github.io">Techie Joe</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove">Dove</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<b>Core</b>
-              </p>
-              <p class="text-right text-gray"><small>
+              <p><code>// footer</code></p>
+              <p class="text-right text-grey"><small>
                   This site is open source.
                   <a href="https://github.com/techie-joe/dove/edit/main/_pugs/core/page.html.pug" target="_edit">Improve this page</a>.</small></p>
             </div>
@@ -72,6 +67,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5413"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.6254"></script>
   </body>
 </html>
