--- a/mallet/404.html
+++ b/mallet/404.html
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.5005"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/mallet/css/style.css?v=0.0.2.3538"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <main class="_app __fadein" id="app">
       <div class="container-lg px-3 markdown-body" id="layout">
         <div id="header">
           <div id="_header-bar">
-            <div class="_flex my-2">
+            <div class="_flex">
               <div class="_flex-main">
                 <h1 class="_logo" id="_title"><a href="/dove">Dove</a></h1>
               </div>
@@ -23,7 +23,7 @@
           </div>
         </div>
         <nav class="_nav">
-          <p><b>Mallet</b>
+          <div><b>Mallet</b>
 <i class="_icon"><i class="isvg">
                 <svg viewBox="0 0 24 24">
                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -35,7 +35,7 @@
 <a href="/dove/mallet/">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
-          </p>
+          </div>
         </nav>
         <article class="_article">
           <div class="flex" style="margin:1rem auto 3rem auto">
@@ -47,14 +47,14 @@
           </div>
           <div style="margin-top:3rem"></div>
           <hr/>
-          <p><a class="button text-secondary" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
-<a class="button text-secondary" href="/dove" title="Go to Home Page">Home</a>
+          <p><a class="button text-secondary _bt -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a>
+<a class="button text-secondary _bt -l" href="/dove" title="Go to Home Page">Home</a>
           </p>
         </article>
         <footer id="footer">
         </footer>
       </div>
-      <div class="_theme_switch _needjs"><a href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
+      <div class="_theme_switch _needjs"><a class="_bt -h" href="#" onclick="event.preventDefault();theme.change();" title="Change Theme (Alt+T)"><i class="_icon"><i class="isvg">
               <svg viewBox="0 0 24 24">
                 <path d="M19,3H14V5H19V18L14,12V21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10,18H5L10,12M10,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H10V23H12V1H10V3Z" fill="currentColor" fill-opacity="1"></path>
               </svg></i></i></a></div>
@@ -64,6 +64,6 @@
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5005"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3538"></script>
   </body>
 </html>
