--- a/core/preview.html
+++ b/core/preview.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.5004"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?v=0.0.2.3537"/><!-- custom-head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -22,7 +22,7 @@
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <p><b>Core</b>
+              <div><b>Core</b>
 <i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -34,7 +34,7 @@
 <a href="/dove/core/">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
-              </p>
+              </div>
             </div>
           </nav>
           <main class="_main">
@@ -462,7 +462,9 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
           </main>
           <footer class="_footer">
             <div class="_layout _960">
+              <hr/>
               <p><code>// footer</code></p>
+              <hr/>
               <p class="text-right text-grey"><small>
                   This site is open source.
                   <a href="https://github.com/techie-joe/dove/edit/main/_pugs/core/preview.html.pug" target="_edit">Improve this page</a>.</small></p>
@@ -484,6 +486,6 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
     <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/core" title="Go to the Core">✨ Made with Core</a>
     </div>
     <script>window.ghost='bG9jYWxob3N0LHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.5004"></script>
+    <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?v=0.0.2.3537"></script>
   </body>
 </html>
